Fix some minor things - add overflow and max height to the subscription panel if it is inline with other panels - remove the "section--top" if the panel is inline - add a height if the panel is on its own, so it is not infinitely long

--- a/assets/styles/components/_sidebar-subscriptions.scss
+++ b/assets/styles/components/_sidebar-subscriptions.scss
@@ -3,6 +3,12 @@
 }
 
 .sidebar-subscriptions {
+  height: fit-content;
+
+  &.inline .subscription-list {
+    max-height: 40em;
+    overflow: auto;
+  }
 
   &.section {
     padding: 0.5rem 0.5rem 1rem;
